...
import UIKit

struct AlertDisplay {

    //derived from Chase's code snippet. Refactored to return UIAlertController
    func normalAlert(_ message: String) -> UIAlertController {
        let alert = UIAlertController(title: "ON THE HOUSE", message: message, preferredStyle: .alert)
        let cancelAction = UIAlertAction(title: "OK", style: .cancel, handler: nil)
            alert.addAction(cancelAction)
        return alert
    }
    
    func justifiedTextAlert( _ message: String) -> UIAlertController {
        let alert = UIAlertController(title: "ON THE HOUSE", message: message, preferredStyle: .alert)
...
